# llm-zoomcamp

./: .gitignore  README.md
[draft] final-project/: .env.example  docker-compose.yaml  requirements.txt
[draft] final-project/data/: .gitignore  documents_metadata.json
[draft] final-project/deployment/: README.md
[draft] final-project/evaluation/: README.md  llm_judge.py  requirements.txt  retrieval_eval.py
[draft] final-project/generation/: rag_pipeline.py  requirements.txt
[draft] final-project/ingestion/: README.md
[draft] final-project/monitoring/: schema.sql
[draft] final-project/notebooks/: README.md
[draft] final-project/retrieval/: README.md  hybrid_search.py  query_rewriter.py  requirements.txt  rrf_fusion.py
final-project/: .env.example  Dockerfile  Makefile  README.md  docker-compose.yaml  docker-compose.yml  requirements.txt
final-project/app/: app.py  requirements.txt  streamlit_app.py
final-project/docker/: Dockerfile  docker-compose.yml
final-project/docs/: architecture.md
final-project/evaluation/: README.md  evaluate.py  generate_ground_truth.py  ground_truth.csv
final-project/generation/: README.md  (+2 more)
homework/: README.md
homework/02-vector-search/: README.md  homework.py  pyproject.toml  requirements.txt
homework/03-orchestration/: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.sh
homework/03-orchestration/flows/: 3_rag_with_websearch.yaml  6_multi_agent_research.yaml
homework/04-evaluation/: .env.template  .gitignore  README.md  ground-truth.csv  homework.py  pyproject.toml
homework/05-monitoring/: .env.template  .gitignore  README.md  homework.py  pyproject.toml  rag_helper.py
(+118 files in other folders)
