[project]
name = "homework"
version = "0.1.0"
description = "LLM Zoomcamp 2026 - Homework 02: Vector Search"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gitsource",
    "minsearch",
    "numpy",
    "onnxruntime",
    "tokenizers",
    "tqdm",
]

[dependency-groups]
dev = ["huggingface-hub", "jupyter"]
