[project]
name = "llm-zoomcamp-04-evaluation"
version = "0.1.0"
description = "Homework Module 04 - Evaluation"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.28.1",
    "tqdm>=4.67.3",
    "gitsource",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
]
