[project]
name = "llm-zoomcamp-05-monitoring"
version = "0.1.0"
description = "Homework Module 05 - Monitoring (OpenTelemetry)"
requires-python = ">=3.12"
dependencies = [
    "gitsource",
    "minsearch>=0.1.0",
    "openai>=2.38.0",
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.2",
]
